# gpustack-helper

./: .gitignore  Distribution.xml.tmpl  GPUStack.wxs  darwin.spec  helper.spec  pyinstaller_common.py  pyproject.toml  windows.spec
.github/actions/copy-to-cos/: action.yaml
.github/workflows/: ci-common.yaml  ci.yaml  pr.yaml  tag.yaml
gpustack_helper/: __init__.py  about.py  binary_entrypoint.py  config.py  databinder.py  defaults.py  icon.py  main.py  process.py  status.py  tools.py  translator.py
gpustack_helper/config/: __init__.py  backends.py  config.py  gpustack_config.py  windows_backend.py
gpustack_helper/quickconfig/: common.py  dialog.py  envvar.py  general.py
gpustack_helper/services/: abstract_service.py  darwin.py  windows.py
hack/: build-openfst.sh  build.sh  export_version.sh  install.sh  package.sh
hack/lib/: version.sh
hack/lib/windows/: version.ps1
hack/patch/: _version.py.tmpl  openfst.patch
hack/windows/: build.ps1  export_version.ps1  install.ps1  lint.ps1  package.ps1
scripts/: postinstall  preinstall
translations/: en_US.ts  zh_CN.ts
