[project]
name = "gpustack-helper"
dynamic = ["version"]

[tool.poetry]
name = "gpustack-helper"
version = "0.0.0"
description = "The GPUStack Installer is a helper tool for installing and configuring GPUStack."
authors = ["GPUStack Authors <contact@gpustack.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
gpustack = { version = "0.7.0rc2", extras = ["audio"] }
# gpustack = { git = "https://github.com/gpustack/gpustack.git", branch = "main", extras = ["audio"] }

PySide6-Essentials="~6.8"
platformdirs = "^4.3.8"
msgpack = "^1.1.1"
pynini = { version = "2.1.6", markers = "sys_platform == 'darwin'" }
wetextprocessing = { version = "1.0.4.1", markers = "sys_platform == 'darwin'" }
transformers= "4.51.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"
pre-commit = "^4.2.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
helper = "gpustack_helper.main:main"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
[tool.poetry-dynamic-versioning.from-file]
source = 'gpustack_helper/_version.py'
pattern = "^__version__ = ['\"]([^'\"]*)['\"]$"


[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true
